--- a/APM-Start/src/app/app.component.html
+++ b/APM-Start/src/app/app.component.html
@@ -1,6 +1,4 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!!
-  </h1>
-  ... Starter Files ...
+<div style="text-align: center">
+  <h1>{{pageTitle}}</h1>
+  <pm-products></pm-products>
 </div>
