--- a/APM-Start/src/app/products/product-list.component.html
+++ b/APM-Start/src/app/products/product-list.component.html
@@ -25,11 +25,11 @@
             <th>Code</th>
             <th>Available</th>
             <th>Price</th>
-            <th>5 start Rating</th>
+            <th>Rating</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let product of products">
+          <tr *ngFor="let product of filteredProducts()">
             <td>
               <img
                 *ngIf="showImage"
@@ -43,7 +43,7 @@
             <td>{{ product.productCode | lowercase }}</td>
             <td>{{ product.releaseDate }}</td>
             <td>{{ product.price | currency:'USD':'symbol':'1.2-2' }}</td>
-            <td>{{ product.starRating }}</td>
+            <td> <pm-star [rating]="product.starRating" (notify)="onNotify($event)"></pm-star></td>
           </tr>
         </tbody>
       </table>
